devops/09-ingress-live-environment/traefik-ds-service.yaml
---
  apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: traefik-ingress-controller
    namespace: kube-system
---
  kind: DaemonSet
  apiVersion: apps/v1
  metadata:
    name: traefik-ingress-controller
    namespace: kube-system
    labels:
      k8s-app: traefik-ingress-lb
  spec:
    selector:
      matchLabels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    template:
      metadata:
        labels:
          k8s-app: traefik-ingress-lb
          name: traefik-ingress-lb
      spec:
        serviceAccountName: traefik-ingress-controller
        terminationGracePeriodSeconds: 60
        containers:
        - image: traefik:v1.7
          name: traefik-ingress-lb
          ports:
          - name: http
            containerPort: 80
            hostPort: 80
          - name: admin
            containerPort: 8080
            hostPort: 8080
          securityContext:
            capabilities:
              drop:
              - ALL
              add:
              - NET_BIND_SERVICE
          args:
          - --api
          - --kubernetes
          - --logLevel=INFO
---
  kind: Service
  apiVersion: v1
  metadata:
    name: traefik-ingress-service
    namespace: kube-system
  spec:
    selector:
      k8s-app: traefik-ingress-lb
    ports:
      - protocol: TCP
        port: 80
        name: web
      - protocol: TCP
        port: 8080
        name: admin
