devops/09-ingress-live-environment/traefik-admin-ingress.yaml
---
  apiVersion: v1
  kind: Service
  metadata:
    name: traefik-web-ui
    namespace: kube-system
  spec:
    type: NodePort
    selector:
      k8s-app: traefik-ingress-lb
    ports:
    - name: web
      port: 80
      targetPort: 8080
      nodePort: 30777
---
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: traefik-web-ui
    namespace: kube-system
  spec:
    rules:
    - host: traefik-ui.minikube
      http:
        paths:
        - path: /
          backend:
            serviceName: traefik-web-ui
            servicePort: web
